# nimmer

./: azure-pipelines.yml  pyproject.toml
.github/workflows/: ci.yml
src/nimmer/: nimmer.py
tests/: test_nimmer.py
